--- a/styles/style.css
+++ b/styles/style.css
@@ -4,3 +4,43 @@
     font-family: Lato;
 	
 }
+/*header-part*/
+.header-part{
+	background-color: rgba(229, 84, 115, 0.10);
+	padding: 0px 150px 0px 150px;
+	display: flex;
+	align-items: center;
+	
+}
+.beautiful-caption h1{
+	font-weight: 800;
+	font-size: 50px;
+	padding-bottom: 30px;
+	width: 400px;
+}
+.beautiful-caption p{
+	width: 520px;
+	padding-bottom: 30px;
+	text-align: left;
+	
+}
+.beautiful-caption button{
+	padding: 10px 25px;
+	background-color: #E55473;
+	color: white;
+	border-color: #E55473;
+	border-radius: 5px;
+	border-width: 0px;
+	font-size: 15px;
+	
+}
+.beautiful-flower{
+	padding-top: 70px;
+	padding-left: 50px;
+	
+}
+.beautiful-flower img{
+	width: 500px;
+	height: 500px;
+	display: block;
+}
