complete feature part

--- a/styles/style.css
+++ b/styles/style.css
@@ -44,3 +44,55 @@
 	height: 500px;
 	display: block;
 }
+/*feature*/
+.feature{
+	padding: 100px 150px 100px 150px;
+}
+.feature-title{
+	text-align: center;
+	padding-bottom: 40px;
+}
+.feature-para p{
+	width: 480px;
+	padding-left: 300px;
+	
+}
+
+.feature-image{
+	display: flex;
+	
+}
+.feature-image p{
+	text-align: center;
+}
+.feature-image .image1{
+	background-color: rgba(167, 33, 98, 0.15);;
+	padding: 80px 15px 0px;
+	border-top-left-radius: 50%;
+	border-top-right-radius: 50%;
+}
+.feature-image .image2{
+	background-color: rgba(5, 151, 160, 0.15);
+	margin-left: 20px;
+	padding: 80px 15px 0px;
+	border-top-left-radius: 50%;
+	border-top-right-radius: 50%;
+}
+.feature-image .image3{
+	background-color: rgba(71, 125, 17, 0.15);
+	margin-left: 20px;
+	padding: 80px 15px 0px;
+	border-top-left-radius: 50%;
+	border-top-right-radius: 50%;
+}
+.feature-image  img{
+	width: 300px;
+	height: 300px;
+	display: block;
+}
+.feature-image .title{
+	font-weight: 800;
+	font-size: 25px;
+	text-decoration: underline;
+	
+}
