--- a/styles/style.css
+++ b/styles/style.css
@@ -161,6 +161,11 @@
 	background-color: rgba(71, 125, 17, 0.15);
 
 }
+.Instagram h1{
+    font-weight: 800;
+	font-size: 40px;
+
+}
 .Instagram h1,p{
   text-align: center;
   padding-top: 20px;
