--- a/styles/style.css
+++ b/styles/style.css
@@ -158,7 +158,7 @@
 /*instagram*/
 .Instagram{
 	padding: 50px 150px 50px 150px;
-	background-color: rgba(71, 125, 17, 0.15);
+	background-color: white;
 
 }
 .Instagram h1{
@@ -221,7 +221,61 @@
 	font-size: 15px;
 	
 }
+/*team*/
+.team-part{
+	padding: 30px 150px 50px 150px;
+	background-color: rgba(71, 125, 17, 0.15);
+	
+}
+.team-part .title{
+	font-weight: 800;
+	font-size: 40px;
+	padding-top: 30px;
+	padding-bottom: 20px;
+	text-align: center;
+}
+.team{
+	display: flex;
+	justify-content: center;
+}
+.team-member2{
+	margin-left: 30px;
+	
+}
 
+.team-member3{
+	margin-left: 30px;
+}
+/*contact-part*/
+.contact-part{
+	padding: 40px 150px 70px 150px;
+	text-align: center;
+	background-color: #353b48;
+	color: #FFF;
+}
+.contact-title{
+	padding-top: 30px;
+	padding-bottom: 30px;
+}
+.contact-part input, textarea {
+	width: 60%;
+	padding: 12px;
+	border: 1px solid #ccc;
+	border-radius: 4px;
+	box-sizing: border-box;
+	margin-top: 6px;
+	margin-bottom: 16px;
+	resize: vertical;
+  }
+  .contact-button{
+	padding: 14px 30px 13px 30px;
+	background-color: #E55473;
+	color: white;
+	border-color: #E55473;
+	border-radius: 5px;
+	border-width: 0px;
+	font-size: 15px;
+  }
 /*footer-part*/
 .footer-part{
 	padding: 40px 150px 70px 150px;
